# gofile-uploader

./: .gitignore  CHANGELOG.md  README.md  gofile-uploader.py  pyproject.toml  requirements.txt
docs/plans/: 2026-01-08-pypi-release.md  2026-01-08-v1-ux-improvements-design.md  2026-01-08-v1-ux-improvements-implementation.md
src/: __init__.py  __main__.py  commands.py  config.py  db_manager.py  file_manager.py  gofile_client.py  gofile_uploader.py  logging_utils.py  utils.py
src/services/: __init__.py  category_service.py  deletion_service.py  upload_service.py
tests/: __init__.py  conftest.py  test_cli.py  test_db_manager.py  test_file_manager.py  test_gofile_client.py  test_integration.py  test_utils.py
