[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gofile-uploader"
dynamic = ["version"]
description = "Upload files to GoFile.io with progress tracking, category management, and SQLite-based file tracking"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "GoFile Uploader Contributors"}
]
keywords = ["gofile", "upload", "file-sharing", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28.1",
    "tqdm>=4.64.1",
    "requests-toolbelt>=1.0.0",
    "wcwidth>=0.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
gofile-uploader = "src.gofile_uploader:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/gofile-uploader"
Repository = "https://github.com/YOUR_USERNAME/gofile-uploader"
Issues = "https://github.com/YOUR_USERNAME/gofile-uploader/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
